feat: batch .env

--- a/batch/.env
+++ b/batch/.env
@@ -1,9 +1,7 @@
 # Database
-DATABASE_NAME='cobweb'
-DATABASE_USER='django'
-DATABASE_PASSWORD='password'
 # Setting for Dockerfile
-DATABASE_HOST='host.docker.internal'
-# Setting for local server
-# DATABASE_HOST='127.0.0.1'
-DATABASE_PORT='5432'
+SPARK_DATABASE_URL='jdbc:postgresql://host.docker.internal:5432/cobweb'
+# Setting for localhost
+# SPARK_DATABASE_URL='jdbc:postgresql://127.0.0.1:5432/cobweb'
+SPARK_DATABASE_USER='django'
+SPARK_DATABASE_PASSWORD='password'
