--- a/batch/Dockerfile
+++ b/batch/Dockerfile
@@ -1,5 +1,6 @@
 FROM apache/spark-py:latest
+USER root
 ADD ./requirements.txt .
+ADD ./.env .
 RUN pip install -r requirements.txt && \
     wget -P ./jars https://jdbc.postgresql.org/download/postgresql-42.7.3.jar
-ADD ./cobweb/bin/exec.sh ./cobweb/bin/exec.sh
