--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -3,9 +3,9 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    command: python3 manage.py runserver 0.0.0.0:8000
+    # For Debug
+    # command: python3 manage.py runserver 0.0.0.0:8000
+    command: uwsgi --http :8000 --wsgi-file cobweb/wsgi.py
     container_name: cobwebserver
     ports:
       - "8000:8000"
-    volumes:
-      - .:/code
