--- a/batch/Dockerfile
+++ b/batch/Dockerfile
@@ -1,6 +1,11 @@
-FROM apache/spark-py:latest
+ARG sparkpy_version
+FROM apache/spark-py:${sparkpy_version}
+ARG workdir
 USER root
-ADD ./requirements.txt .
-ADD ./.env .
-RUN pip install -r requirements.txt && \
-    wget -P ./jars https://jdbc.postgresql.org/download/postgresql-42.7.3.jar
+RUN mkdir -p ${workdir}
+WORKDIR ${workdir}
+COPY ./requirements.txt .
+COPY ./.env .
+ARG jdbc_postgres
+RUN pip install --no-cache-dir -r requirements.txt && \
+    wget --progress=dot:giga -P ./jars ${jdbc_postgres}
