--- a/database/.env
+++ b/database/.env
@@ -1,7 +1,9 @@
+# Docker
+DOCKER_POSTGRES_VERSION=latest
+
 # Profile
 PROFILE=local
 
 # PostgreSQL
-POSTGRES_VERSION=latest
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
