--- a/batch/.env
+++ b/batch/.env
@@ -1,5 +1,10 @@
+# Docker
+DOCKER_SPARKPY_VERSION='latest'
+DOCKER_WORKDIR='/opt/spark/work-dir'
+DOCKER_JDBC_POSTGRES='https://jdbc.postgresql.org/download/postgresql-42.7.3.jar'
+
 # Database
-# Setting for Dockerfile
+# Setting for Docker container
 SPARK_DATABASE_URL='jdbc:postgresql://host.docker.internal:5432/cobweb'
 # Setting for localhost
 # SPARK_DATABASE_URL='jdbc:postgresql://127.0.0.1:5432/cobweb'
