--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,13 @@
-FROM python:3
+ARG python_version
+FROM python:${python_version}
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /code
 WORKDIR /code
-ADD requirements.txt /code/
-RUN pip install -r requirements.txt
-ADD ./.env /code/
-ADD ./cobweb/ /code/cobweb/
-ADD ./manage.py /code/
+COPY requirements.txt /code/
+RUN pip install --no-cache-dir -r requirements.txt
+COPY ./.env /code/
+COPY ./cobweb/ /code/cobweb/
+COPY ./manage.py /code/
 RUN python3 manage.py collectstatic && \
-    python3 manage.py migrate && \
-    python3 manage.py createsuperuser --noinput
+    python3 manage.py migrate
+RUN python3 manage.py createsuperuser --noinput; exit 0
