--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -3,6 +3,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+      args:
+        - python_version=${DOCKER_PYTHON_VERSION}
     # For Debug
     # command: python3 manage.py runserver 0.0.0.0:8000
     command: uwsgi --http :8000 --wsgi-file cobweb/wsgi.py
