--- a/.github/workflows/hadolint-database.yaml
+++ b/.github/workflows/hadolint-database.yaml
@@ -1,4 +1,4 @@
-name: Hadolint Action
+name: Hadolint Database
 on:
   pull_request:
     types: [synchronize, opened, reopened]
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: hadolint/hadolint-action@v3.1.0
         with:
-          recursive: true
+          dockerfile: database/Dockerfile
