--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "lint": "expo lint"
   },
   "jest": {
@@ -45,6 +46,8 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "eas-cli": "^16.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
