--- a/.github/workflows/test-app.yaml
+++ b/.github/workflows/test-app.yaml
@@ -5,20 +5,22 @@ on:
   push:
     branches:
       - main
+env:
+  WORKING_DIRECTORY: app
 jobs:
   test:
     name: Run test
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: app
+        working-directory: ${{ env.WORKING_DIRECTORY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Nodejs
         uses: actions/setup-node@v4
         with:
-          node-version-file: package.json
+          node-version-file: ${{ env.WORKING_DIRECTORY }}/package.json
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
