--- a/.github/workflows/test-app.yaml
+++ b/.github/workflows/test-app.yaml
@@ -17,6 +17,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10.6.3
       - name: Setup Nodejs
         uses: actions/setup-node@v4
         with:
