chore(batch): unittest for batch and change directory structure

--- a/batch/Dockerfile
+++ b/batch/Dockerfile
@@ -9,3 +9,4 @@ COPY ./.env .
 ARG jdbc_postgres
 RUN pip install --no-cache-dir -r requirements.txt && \
     wget --progress=dot:giga -P ./jars ${jdbc_postgres}
+ENV PYTHONPATH ${workdir}
