fix(batch): lint

--- a/.github/workflows/test-batch.yaml
+++ b/.github/workflows/test-batch.yaml
@@ -27,7 +27,7 @@ jobs:
         run: python -m unittest
       - name: Lint
         env:
-          - PYTHONPATH: ${{ env.WORKING_DIRECTORY }}
+          PYTHONPATH: ${{ env.WORKING_DIRECTORY }}
         run: |
           pip install pylint
           pylint cobweb
