chore(batch): bump pyspark

--- a/batch/.env
+++ b/batch/.env
@@ -1,6 +1,7 @@
 # Docker
 DOCKER_SPARKPY_VERSION='latest'
 DOCKER_WORKDIR='/opt/spark/work-dir'
+DOCKER_PYTHON_VERSION='3.10'
 DOCKER_JDBC_POSTGRES='https://jdbc.postgresql.org/download/postgresql-42.7.3.jar'
 
 # Database
