--- a/batch/Dockerfile
+++ b/batch/Dockerfile
@@ -7,6 +7,10 @@ WORKDIR ${workdir}
 COPY ./requirements.txt .
 COPY ./.env .
 ARG jdbc_postgres
-RUN pip install --no-cache-dir -r requirements.txt && \
+ARG python_version
+RUN apt-get -y update && \
+    apt-get -y install python${python_version} && \
+    pip install -U pip && \
+    pip install --no-cache-dir -r requirements.txt && \
     wget --progress=dot:giga -P ./jars ${jdbc_postgres}
 ENV PYTHONPATH ${workdir}
