Chore/bump pyspark (#8)
* chore(batch): bump pyspark

* chore(batch): bump pyspark

* fix(batch): hadolint

--- a/batch/Dockerfile
+++ b/batch/Dockerfile
@@ -7,6 +7,12 @@ WORKDIR ${workdir}
 COPY ./requirements.txt .
 COPY ./.env .
 ARG jdbc_postgres
-RUN pip install --no-cache-dir -r requirements.txt && \
+ARG python_version
+RUN apt-get -y update && \
+    apt-get -y --no-install-recommends install python${python_version} && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* && \
+    pip install --no-cache-dir -U pip && \
+    pip install --no-cache-dir -r requirements.txt && \
     wget --progress=dot:giga -P ./jars ${jdbc_postgres}
 ENV PYTHONPATH ${workdir}
