--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,6 +7,7 @@ COPY requirements.txt /code/
 RUN pip install --no-cache-dir -r requirements.txt
 COPY ./.env /code/
 COPY ./cobweb/ /code/cobweb/
+COPY ./custom_auth/ /code/custom_auth/
 COPY ./manage.py /code/
 RUN python3 manage.py collectstatic && \
     python3 manage.py migrate
