feat(server): custom auth

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /code
 COPY requirements.txt /code/
 RUN pip install --no-cache-dir -r requirements.txt
 COPY ./.env /code/
+# TODO: simplify copy apps
 COPY ./cobweb/ /code/cobweb/
 COPY ./custom_auth/ /code/custom_auth/
 COPY ./manage.py /code/
