feat(server): custom auth

--- a/batch/Dockerfile
+++ b/batch/Dockerfile
@@ -1,5 +1,5 @@
 ARG sparkpy_version
-FROM apache/spark-py:${sparkpy_version}
+FROM apache/spark-py:${sparkpy_version:-latest}
 ARG workdir
 USER root
 RUN mkdir -p ${workdir}
@@ -15,4 +15,4 @@ RUN apt-get -y update && \
     pip install --no-cache-dir -U pip && \
     pip install --no-cache-dir -r requirements.txt && \
     wget --progress=dot:giga -P ./jars ${jdbc_postgres}
-ENV PYTHONPATH ${workdir}
+ENV PYTHONPATH=${workdir}
