--- a/server/.env
+++ b/server/.env
@@ -3,10 +3,11 @@ DOCKER_PYTHON_VERSION='3'
 
 # Security
 SECRET_KEY='development'
-DEBUG=False
+DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1,10.0.2.2
 
 # Database
+DATABASE_ENGINE='django.db.backends.postgresql'
 DATABASE_NAME='cobweb'
 DATABASE_USER='django'
 DATABASE_PASSWORD='password'
