--- a/.github/workflows/test-server.yaml
+++ b/.github/workflows/test-server.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Test
-        run: python manage.py unittest
+        run: python manage.py test
         env: 
           PROFILE: unittest
       - name: Lint
