Feat/server auth (#9)
* feat(server): custom auth

* feat(server): custom auth

* doc: custom auth

* feat(server): custom auth

* fix(server): github actions

* fix(server): pylint

* fix: hadolint

--- a/batch/Dockerfile
+++ b/batch/Dockerfile
@@ -1,4 +1,4 @@
-ARG sparkpy_version
+ARG sparkpy_version=latest
 FROM apache/spark-py:${sparkpy_version}
 ARG workdir
 USER root
@@ -15,4 +15,4 @@ RUN apt-get -y update && \
     pip install --no-cache-dir -U pip && \
     pip install --no-cache-dir -r requirements.txt && \
     wget --progress=dot:giga -P ./jars ${jdbc_postgres}
-ENV PYTHONPATH ${workdir}
+ENV PYTHONPATH=${workdir}
