--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,13 @@
-ARG python_version
+ARG python_version=latest
 FROM python:${python_version}
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONUNBUFFERED=1
 RUN mkdir /code
 WORKDIR /code
 COPY requirements.txt /code/
 RUN pip install --no-cache-dir -r requirements.txt
 COPY ./.env /code/
 COPY ./cobweb/ /code/cobweb/
+COPY ./custom_auth/ /code/custom_auth/
 COPY ./manage.py /code/
 RUN python3 manage.py collectstatic && \
     python3 manage.py migrate
