--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ DOCKER_PYTHON_VERSION='3'
 
 # Security
 SECRET_KEY='development'
-DEBUG=True
+DEBUG=False
 ALLOWED_HOSTS=localhost,127.0.0.1,10.0.2.2
 
 # Database
