--- a/.github/workflows/test-server.yaml
+++ b/.github/workflows/test-server.yaml
@@ -22,14 +22,12 @@ jobs:
         with:
           python-version: '3.13.2'
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install .
       - name: Test
         run: python src/manage.py test src
         env: 
           PROFILE: unittest
       - name: Lint
-        env:
-          PYTHONPATH: ${{ github.workspace }}/${{ env.WORKING_DIRECTORY }}
         run: |
-          pip install pylint pylint-django
+          pip install ".[dev]"
           pylint src
