feat(batch): pyproject.toml

--- a/batch/Dockerfile
+++ b/batch/Dockerfile
@@ -15,4 +15,4 @@ RUN apt-get -y update && \
     pip install --no-cache-dir -U pip && \
     pip install --no-cache-dir -r requirements.txt && \
     wget --progress=dot:giga -P ./jars ${jdbc_postgres}
-ENV PYTHONPATH=${workdir}
+ENV PYTHONPATH=${workdir}/src/
