--- a/.github/workflows/test-batch.yaml
+++ b/.github/workflows/test-batch.yaml
@@ -22,12 +22,10 @@ jobs:
         with:
           python-version: '3.10.12'
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install .
       - name: Test
-        run: python -m unittest
+        run: python -m unittest tests/test_*.py
       - name: Lint
-        env:
-          PYTHONPATH: ${{ github.workspace }}/${{ env.WORKING_DIRECTORY }}
         run: |
-          pip install pylint
-          pylint cobweb
+          pip install ".[dev]"
+          pylint src
