--- a/app/app.json
+++ b/app/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "cobweb",
-    "slug": "cobweb",
+    "name": "parfum",
+    "slug": "parfum",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./src/assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
