--- a/batch/.env
+++ b/batch/.env
@@ -6,8 +6,8 @@ DOCKER_JDBC_POSTGRES='https://jdbc.postgresql.org/download/postgresql-42.7.3.jar
 
 # Database
 # Setting for Docker container
-SPARK_DATABASE_URL='jdbc:postgresql://host.docker.internal:5432/cobweb'
+SPARK_DATABASE_URL='jdbc:postgresql://host.docker.internal:5432/parfum'
 # Setting for localhost
-# SPARK_DATABASE_URL='jdbc:postgresql://127.0.0.1:5432/cobweb'
+# SPARK_DATABASE_URL='jdbc:postgresql://127.0.0.1:5432/parfum'
 SPARK_DATABASE_USER='django'
 SPARK_DATABASE_PASSWORD='password'
