--- a/server/.env
+++ b/server/.env
@@ -8,7 +8,7 @@ ALLOWED_HOSTS=localhost,127.0.0.1,10.0.2.2
 
 # Database
 DATABASE_ENGINE='django.db.backends.postgresql'
-DATABASE_NAME='cobweb'
+DATABASE_NAME='parfum'
 DATABASE_USER='django'
 DATABASE_PASSWORD='password'
 # Setting for Dockerfile
